Change ref url to s3 bucket

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <div class="bg-image" style="background-image: url('https://thatsmidnight.neocities.org/img/bg1.png');background-repeat: repeat;">
+  <div class="bg-image" style="background-image: url('https://s3.amazonaws.com/thatsmidnight.com/img/bg1.png');background-repeat: repeat;">
     <head>
       <meta charset="utf-8">
       <title>ThatsMidnight's Website!</title>
@@ -10,7 +10,7 @@
       <meta name="keywords" content="thatsmidnight, midnight, music, english, crow, bird, vtuber, engineer, programmer, musician" >
       <meta name="robots" content="index, follow">
       <meta name="revisit-after" content="7 days">
-      <link rel="shortcut icon" href="https://thatsmidnight.neocities.org/img/favicon.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="https://s3.amazonaws.com/thatsmidnight.com/img/favicon.ico" type="image/x-icon">
       <link href="bootstrap.css" rel="stylesheet">
     </head>
     <body id="top" class="preview" data-spy="scroll" data-target=".subnav" data-offset="80">
