--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <div class="bg-image" style="background-image: url('https://s3.amazonaws.com/thatsmidnight.com/img/bg1.png');background-repeat: repeat;">
+  <div class="bg-image" style="background-image: url('img/bg1.png');background-repeat: repeat;">
     <head>
       <meta charset="utf-8">
       <title>ThatsMidnight's Website!</title>
@@ -8,9 +8,7 @@
       <meta name="description" content="The permanent socials, various links, and info of ThatsMidnight!" />
       <meta name="author" content="ThatsMidnight">
       <meta name="keywords" content="thatsmidnight, midnight, music, english, crow, bird, vtuber, engineer, programmer, musician" >
-      <meta name="robots" content="index, follow">
-      <meta name="revisit-after" content="7 days">
-      <link rel="shortcut icon" href="https://s3.amazonaws.com/thatsmidnight.com/img/favicon.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
       <link href="bootstrap.css" rel="stylesheet">
     </head>
     <body id="top" class="preview" data-spy="scroll" data-target=".subnav" data-offset="80">
@@ -65,7 +63,7 @@
         <p class="pull-right" style="margin-top: -14px"><img src="img/7upspot.gif">&nbsp; Built with <a href="https://code.divshot.com/geo-bootstrap/">Geo for Bootstrap</a></p>
       </footer>
       <center><img src="img/counter.gif"></center>
-      <script src="/theme-control.js"></script>
+      <script src="theme-control.js"></script>
     </body>
   </div>
 </html>
