Add GitHub and rearrange list of socials

--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,11 @@
         <ul>
           <li><a href="https://twitter.com/thatsmidnight_">Twitter</a></li>
           <li><a href="https://soundcloud.com/thatsmidnight">SoundCloud</a></li>
-          <li><a href="https://www.youtube.com/@thatsmidnight">YouTube</a></li>
+          <li><a href="https://github.com/thatsmidnight">GitHub</a></li>
           <li><a href="https://www.instagram.com/thatsmidnight/">Instagram</a></li>
-          <li><a href="https://www.twitch.tv/succfarmer">Twitch</a></li>
           <li><a href="https://www.tumblr.com/thatsmidnight">Tumblr</a></li>
+          <li><a href="https://www.youtube.com/@thatsmidnight">YouTube</a></li>
+          <li><a href="https://www.twitch.tv/succfarmer">Twitch</a></li>
           <li><a href="https://thatsmidnight.carrd.co/">My Carrd</a></li>
         </ul>
       </section>
