Make slight changes to initial template

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ThatsMidnight's Portfolio</title>
-    <meta name="description" content="Professional portfolio of ThatsMidnight - Software Engineer, Musician, and Content Creator">
+    <meta name="description" content="Professional portfolio of ThatsMidnight - Backend Python Developer and Hobbyist Musician">
     <meta name="author" content="ThatsMidnight">
-    <meta name="keywords" content="thatsmidnight, midnight, software engineer, programmer, musician, portfolio">
+    <meta name="keywords" content="thatsmidnight, midnight, chad, software engineer, backend, python developer, developer, python, programmer, musician, portfolio">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     
     <!-- Bootstrap 5.3 CSS -->
@@ -232,8 +232,8 @@
         <div class="container">
             <div class="row justify-content-center text-center">
                 <div class="col-lg-8 hero-content">
-                    <h1 class="hero-title">ThatsMidnight</h1>
-                    <p class="hero-subtitle">Software Engineer • Musician • Content Creator</p>
+                    <h1 class="hero-title">ThatsMidnight (Chad)</h1>
+                    <p class="hero-subtitle">Backend Python Developer • Hobbyist Musician</p>
                     <div class="d-flex gap-3 justify-content-center flex-wrap">
                         <a href="#projects" class="btn btn-primary btn-lg">View My Work</a>
                         <a href="#contact" class="btn btn-outline-light btn-lg">Get In Touch</a>
@@ -249,9 +249,9 @@
             <h2 class="section-title">About Me</h2>
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h3 class="mb-4">Hello, I'm ThatsMidnight</h3>
-                    <p class="lead mb-4">A passionate software engineer and creative professional with expertise in programming, music, and content creation.</p>
-                    <p>I combine technical skills with creative vision to build meaningful projects and engage with communities. Whether it's developing software solutions, creating music, or streaming content, I approach everything with dedication and attention to detail.</p>
+                    <h3 class="mb-4">Hello, I'm ThatsMidnight, but you can call me Chad 😀</h3>
+                    <p class="lead mb-4">A passionate software engineer and creative professional with expertise in backend Python development.</p>
+                    <p>I combine technical skills with creative vision to build meaningful projects and engage with communities. Whether it's developing software solutions or creating music, I approach everything with dedication and attention to detail.</p>
                 </div>
                 <div class="col-lg-6">
                     <div class="row g-4">
@@ -260,8 +260,8 @@
                                 <div class="feature-icon mx-auto">
                                     <i class="fas fa-code"></i>
                                 </div>
-                                <h5>Software Engineering</h5>
-                                <p class="text-muted">Building robust applications and solutions</p>
+                                <h5>Python Development</h5>
+                                <p class="text-muted">Building robust backend Python applications and solutions</p>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -270,25 +270,7 @@
                                     <i class="fas fa-music"></i>
                                 </div>
                                 <h5>Music</h5>
-                                <p class="text-muted">Creating and performing original compositions</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="text-center">
-                                <div class="feature-icon mx-auto">
-                                    <i class="fas fa-video"></i>
-                                </div>
-                                <h5>Content Creation</h5>
-                                <p class="text-muted">Streaming and community engagement</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="text-center">
-                                <div class="feature-icon mx-auto">
-                                    <i class="fas fa-gamepad"></i>
-                                </div>
-                                <h5>Gaming</h5>
-                                <p class="text-muted">Interactive entertainment and streaming</p>
+                                <p class="text-muted">Creating original compositions and covering favorite tunes</p>
                             </div>
                         </div>
                     </div>
@@ -349,16 +331,6 @@
             <div class="text-center">
                 <a href="https://github.com/ThatsMidnight" class="social-link" title="GitHub">
                     <i class="fab fa-github"></i>
-                </a>
-                <a href="https://www.twitch.tv/succfarmer" class="social-link" title="Twitch">
-                    <i class="fab fa-twitch"></i>
-                </a>
-                <a href="https://thatsmidnight.carrd.co/" class="social-link" title="My Carrd">
-                    <i class="fas fa-link"></i>
-                </a>
-                <a href="#" class="social-link" title="LinkedIn">
-                    <i class="fab fa-linkedin"></i>
-                </a>
                 <a href="#" class="social-link" title="Email">
                     <i class="fas fa-envelope"></i>
                 </a>
@@ -373,8 +345,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="text-center">
-                        <p class="lead mb-4">Interested in collaborating or have a project in mind? I'd love to hear from you.</p>
-                        <a href="mailto:your-email@example.com" class="btn btn-primary btn-lg">
+                        <p class="lead mb-4">Interested in collaborating or have a project in mind? I'd love to hear from you!</p>
+                        <a href="mailto:thatsmidnight@thatsmidnight.com" class="btn btn-primary btn-lg">
                             <i class="fas fa-envelope me-2"></i>Send Me an Email
                         </a>
                     </div>
@@ -388,7 +360,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">&copy; 2024 ThatsMidnight. Built with passion and modern web technologies.</p>
+                    <p class="mb-0">&copy; 2025 ThatsMidnight. Built with passion and modern web technologies.</p>
                 </div>
             </div>
         </div>
