Add more projects and update icons

--- a/src/index.html
+++ b/src/index.html
@@ -288,11 +288,11 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="feature-icon">
-                                <i class="fas fa-globe"></i>
+                                <i class="fas fa-book"></i>
                             </div>
-                            <h5 class="card-title">Web Development</h5>
-                            <p class="card-text">Modern web applications built with cutting-edge technologies and best practices.</p>
-                            <a href="#" class="btn btn-outline-primary">Learn More</a>
+                            <h5 class="card-title">Arcane Scribe</h5>
+                            <p class="card-text">A TTRPG Rulebook RAG System served by an HTTP API Gateway.</p>
+                            <a href="https://github.com/thatsmidnight/Arcane-Scribe" class="btn btn-outline-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -300,11 +300,47 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="feature-icon">
-                                <i class="fas fa-mobile-alt"></i>
+                                <i class="fas fa-clipboard"></i>
                             </div>
-                            <h5 class="card-title">Mobile Apps</h5>
-                            <p class="card-text">Cross-platform mobile applications with intuitive user experiences.</p>
-                            <a href="#" class="btn btn-outline-primary">Learn More</a>
+                            <h5 class="card-title">Automated Taskmaster</h5>
+                            <p class="card-text">Simple FastAPI application that creates an encounter of monsters given a set of parameters.</p>
+                            <a href="https://github.com/thatsmidnight/Automated-Taskmaster" class="btn btn-outline-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="feature-icon">
+                                <i class="fas fa-map"></i>
+                            </div>
+                            <h5 class="card-title">Cartographers Cloud Kit</h5>
+                            <p class="card-text">A web application allowing Game Masters (GMs) to upload, tag, search, and manage small digital assets like map icons, NPC portraits, location images, art snippets, or short pieces of read-aloud text.</p>
+                            <a href="https://github.com/thatsmidnight/Cartographers-Cloud-Kit" class="btn btn-outline-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="feature-icon">
+                                <i class="fas fa-globe"></i>
+                            </div>
+                            <h5 class="card-title">This Website! 😛</h5>
+                            <p class="card-text">Repository for ThatsMidnight's personal static website hosted on S3.</p>
+                            <a href="https://github.com/thatsmidnight/thatsmidnightdotcom" class="btn btn-outline-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="feature-icon">
+                                <i class="fas fa-house"></i>
+                            </div>
+                            <h5 class="card-title">My DDNS Updater</h5>
+                            <p class="card-text">This is a simple, automated service that resolves my DDNS hostname to get my public IP address and update an SSM Parameter to use with a custom whitelisting authorizer.</p>
+                            <a href="https://github.com/thatsmidnight/My-DDNS-Updater" class="btn btn-outline-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -315,8 +351,8 @@
                                 <i class="fas fa-headphones"></i>
                             </div>
                             <h5 class="card-title">Music Projects</h5>
-                            <p class="card-text">Original compositions and audio production showcasing creative versatility.</p>
-                            <a href="#" class="btn btn-outline-primary">Learn More</a>
+                            <p class="card-text">Original compositions, covers, and audio production showcasing creative versatility.</p>
+                            <a href="https://soundcloud.com/thatsmidnight" class="btn btn-outline-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
