Add social container for soundcloud and fix missing link for email

--- a/src/index.html
+++ b/src/index.html
@@ -367,7 +367,11 @@
             <div class="text-center">
                 <a href="https://github.com/ThatsMidnight" class="social-link" title="GitHub">
                     <i class="fab fa-github"></i>
-                <a href="#" class="social-link" title="Email">
+                </a>
+                <a href="https://soundcloud.com/thatsmidnight" class="social-link" title="SoundCloud">
+                    <i class="fab fa-soundcloud"></i>
+                </a>
+                <a href="mailto:thatsmidnight@thatsmidnight.com" class="social-link" title="Email">
                     <i class="fas fa-envelope"></i>
                 </a>
             </div>
